name:                network-uri-json
version:             0.4.0.0

license:             MIT
license-file:        LICENSE

copyright:           (c) 2017 Alex Brandt

author:              Alex Brandt
maintainer:          alunduil@gmail.com

stability:           stable

homepage:            https://github.com/alunduil/network-uri-json
bug-reports:         https://github.com/alunduil/network-uri-json/issues

synopsis:            FromJSON and ToJSON Instances for Network.URI
description:
  FromJSON and ToJSON instances for Network.URI.

category:            Network

cabal-version:       2.0
build-type:          Simple
tested-with:         GHC == 9.6.* || == 9.8.* || == 9.10.* || == 9.12.* || == 9.14.*

extra-source-files:
    ChangeLog.md
  , COPYRIGHT
  , LICENSE
  , README.md
  , Setup.hs

library
  ghc-options:
    -Wall
  if impl(ghc >= 8) {
  ghc-options:
    -Wcompat
  } else {
  ghc-options:
    -fwarn-monomorphism-restriction
    -fwarn-tabs
    -fwarn-unused-do-bind
  }

  default-language:    Haskell2010

  build-depends:
      aeson >=0.8 && <2.3
    , base ^>=4.18 || ^>=4.19 || ^>=4.20 || ^>=4.21 || ^>=4.22
    , network-uri >= 2.6 && < 2.8
    , text >=1.2 && <3

  exposed-modules:
      Network.URI.JSON

  other-modules:

  hs-source-dirs:
      src

test-suite network-uri-json-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs

  ghc-options:
    -Wall
  if impl(ghc >= 8) {
  ghc-options:
    -Wcompat
  } else {
  ghc-options:
    -fwarn-monomorphism-restriction
    -fwarn-tabs
    -fwarn-unused-do-bind
  }

  default-language: Haskell2010

  build-depends:
      aeson >=0.8 && <2.3
    , base ^>=4.18 || ^>=4.19 || ^>=4.20 || ^>=4.21 || ^>=4.22
    , hspec >=2.4 && <2.12
    , network-arbitrary >=0.3 && <1.1
    , network-uri >= 2.6 && < 2.8
    , test-invariant == 0.4.*
    , text >=1.2 && <3

  other-modules:
      Network.URI.JSON
    , Network.URI.JSONSpec

  hs-source-dirs:
      src
    , test

  build-tool-depends:
      hspec-discover:hspec-discover >= 2.4 && < 2.8

source-repository head
  type:     git
  location: https://github.com/alunduil/network-uri-json
  branch:   main
